# pretty-vulkan-printer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  compile_commands.json  readme.md
Tutorial-Example/: .clang-format
Tutorial-Example/src/: main.cpp  tiny_obj_loader.h
libraries/: CMakeLists.txt
resources/: CMakeLists.txt  cube.fbx  test_cube.glb  test_triangle.glb
resources/rossbandiger/: license.txt  scene.gltf
scripts/: install_sdl3.cmake
shaders/: CMakeLists.txt  compile_shaders.cmake  debugline.frag  debugline.vert  depthpass.frag  depthpass.vert  depthpass_ptr.frag  depthpass_ptr.mesh  frag.frag  gbuffer-albedo.frag  gbuffer-albedo.vert  gbuffer-normal.frag  gbuffer-normal.vert  gizmos.frag  gizmos.mesh  gizmos.vert  gpass.frag  gpass.vert  gpass_ptr.frag  gpass_ptr.mesh  lightpass.frag  lightpass.vert  shader.comp  shader.frag  shader.vert  shared_culling.glsl  shared_structs.glsl  tonemapping.frag  triangle_simple.frag  triangle_simple.mesh  triangle_simple.task  triangle_simple_indirect.mesh  triangle_simple_indirect.task  triangle_simple_indirect_ptr.mesh  triangle_simple_indirect_ptr.task  vert.vert  world_binds.glsl
src/: App.cpp  App.h  Buffer.cpp  Buffer.h  Context.h  DestructorQueue.cpp  DestructorQueue.h  GlfwToRender.h  Image.cpp  Image.h  ImguiRenderer.cpp  ImguiRenderer.h  LoadModel.cpp  LoadModel.h  OverwriteNewDelete.cpp  PodHelpers.h  UniformBufferStruct.h  VulkanApp.cpp  VulkanApp.h  VulkanExternalFunctions.cpp  VulkanExternalFunctions.h  Window.cpp  Window.h  globalconst.h  main.cpp  oldmain.cpp
src/Buffer/: Buffer.cpp  Buffer.h  BufferBuilder.cpp  BufferBuilder.h
src/CommandBuffer/: CommandPool.cpp  CommandPool.h
src/Context/: Context.h  Device.cpp  Device.h  Instance.cpp  Instance.h  InstanceBuilder.cpp  InstanceBuilder.h  LogicPhysicalQueueBuilder.cpp  LogicPhysicalQueueBuilder.h  PhysicalDevice.h  QueueFamilies.cpp  QueueFamilies.h
src/Debugger/: DebugVertex.h  Debugger.cpp  Debugger.h  Gizmos.cpp  Gizmos.h  GizmosDrawer.cpp  GizmosDrawer.h  debugger.cpp  debugger.h
src/DescriptorSets/: CommonDescriptorLayouts.h  DescriptorCreator.cpp  DescriptorCreator.h  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.h  DescriptorLayoutCreator.cpp  DescriptorLayoutCreator.h  DescriptorPool.cpp  DescriptorSetBuilder.cpp  DescriptorSetBuilder.h  DescriptorSets.cpp  DescriptorSets.h
src/Events/: Event.h  EventListener.h
src/GraphicsPipeline/: GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  ShaderLoader.cpp  ShaderLoader.h  Vertex.h
src/Image/: Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  Sampler.cpp  SamplerBuilder.cpp  SamplerBuilder.h  StaticCubemapImage.cpp  StaticCubemapImage.h  StaticCubemapImageBuilder.cpp  StaticCubemapImageBuilder.h  StaticImage.cpp  StaticImage.h  TextureBuilder.cpp  TextureBuilder.h  TransitionLayout.cpp  TransitionLayout.h
src/Instance/: VulkanInstance.cpp  VulkanInstance.h  VulkanWindow.cpp  VulkanWindow.h
src/PVPBuffer/: Buffer.cpp  Buffer.h  BufferBuilder.cpp  BufferBuilder.h
src/PVPCommandBuffer/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferBuilder.cpp  CommandBufferBuilder.h  CommandPool.cpp  CommandPool.h
src/PVPDebugger/: Debugger.h
src/PVPDescriptorSets/: DescriptorLayout.cpp  DescriptorLayout.h  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.h  DescriptorPool.h  DescriptorSetBuilder.cpp  DescriptorSetBuilder.h
src/PVPDevice/: Device.cpp  Device.h
src/PVPFrameContext/: FrameContext.cpp  FrameContext.h
src/PVPGraphicsPipeline/: DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  PVPVertex.cpp  PVPVertex.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  ShaderLoader.cpp  ShaderLoader.h  Vertex.cpp  Vertex.h
src/PVPImage/: Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  Sampler.h  SamplerBuilder.h  TextureBuilder.cpp  TextureBuilder.h
src/PVPInstance/: Instance.cpp  Instance.h  InstanceBuilder.cpp  PVPInstance.cpp  PVPInstance.h  PVPInstanceBuilder.cpp  PVPInstanceBuilder.h
src/PVPModels/: GPUModel.h  ModelData.h
src/PVPPhysicalDevice/: Context.h  Device.cpp  Device.h  LogicPhysicalQueueBuilder.cpp  LogicPhysicalQueueBuilder.h  PVPDeviceBuilder.cpp  PVPDeviceBuilder.h  PVPPhysicalDevice.cpp  PVPPhysicalDevice.h  PhysicalDevice.h  QueueFamilies.cpp  QueueFamillies.h
src/PVPRenderPass/: RenderPassBuilder.cpp  RenderPassBuilder.h
src/PVPRenderer/: BlitToSwapchain.cpp  BlitToSwapchain.h  GBuffer.cpp  GBuffer.h  LightPass.cpp  LightPass.h  PVPRenderer.cpp  PVPRenderer.h  RenderInfoBuilder.cpp  RenderInfoBuilder.h  RenderToSwapchain.cpp  RenderToSwapchain.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h
src/PVPScene/: GPUModel.cpp  Scene.cpp  Scene.h
src/PVPSwapchain/: FrameBuffers.cpp  FrameBuffers.h  PVPSwapchain.cpp  PVPSwapchain.h  Swapchain.cpp  Swapchain.h
src/PVPSyncManager/: Fence.h  FrameSyncers.cpp  FrameSyncers.h  Semaphore.h  SyncBuilder.cpp  SyncBuilder.h
src/PVPUniformBuffers/: UniformBuffer.cpp  UniformBuffer.h
src/PVPVMAAllocator/: VmaAllocator.cpp  VmaAllocator.h
src/PVPWindow/: WindowSurface.cpp  WindowSurface.h  WindowSurfaceBuilder.cpp  WindowSurfaceBuilder.h
src/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceBuilder.cpp  PhysicalDeviceBuilder.h
src/RenderPassOLD/: RenderPassBuilder.cpp  RenderPassBuilder.h
src/Renderer/: BlitToSwapchain.cpp  BlitToSwapchain.h  DepthPrePass.cpp  DepthPrePass.h  FrameContext.h  GBuffer.cpp  GBuffer.h  ImguiRenderer.cpp  ImguiRenderer.h  LightPass.cpp  LightPass.h  MeshShaderPass.cpp  MeshShaderPass.h  RenderInfoBuilder.cpp  RenderInfoBuilder.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  ToneMappingPass.cpp  ToneMappingPass.h
src/Scene/: Camera.cpp  Camera.h  LoadModel.cpp  LoadModel.h  ModelData.cpp  ModelData.h  PVPScene.cpp  PVPScene.h
src/SyncManager/: Fence.h  FrameSyncers.cpp  FrameSyncers.h
src/UniformBuffers/: UniformBuffer.cpp  UniformBuffer.h
(+6 files in other folders)
